[package]
name = "bit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap-markdown = "0.1.5"

serde = { version = "1.0", features = ["derive"] }
serini = "0.2"

anyhow = "1.0.102"
chrono = "0.4.44"
flate2 = "1.1.9"
hex = "0.4.3"
itertools = "0.14.0"
sha1 = "0.10.6"
cached = "0.56.0"
colored = "3"
